[package]
name = "wikipedia-network"
version = "0.1.1"
edition = "2024"
description = "A simple crate to turn Wikipedia into a semantic network"
readme = "README.md"
repository = "https://github.com/WaffleSoul4/wikipedia-network"
license = "MIT OR Unlicense"
keywords = ["Semantic_Network", "Wikipedia"]
documentation = "https://docs.rs/wikipedia-network/"


[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
thiserror = "2.0.12"
